--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -34,6 +34,7 @@
 		  <link rel="stylesheet" href="{{asset('css/css/custom-theme/jquery-ui-1.10.0.custom.ie
 		  .css')}}" />
 		<![endif]-->
+
 		<style>
 		#logo1 {
 		    background-color: #000000;
@@ -80,7 +81,6 @@
 								<span class="user-info"> 
 									<small>Usuario:</small>
 									{{app.user.username ? app.user.username : app.user.username}}
-                                                                        {{app.user.id}}
 								</span>
 
 								<i class="icon-caret-down"></i>
@@ -225,6 +225,32 @@
 						</a>
 
 						<ul class="submenu">
+							<li>
+								<a href="{{path('pago')}}">
+									<i class="icon-double-angle-right"></i>
+									Pagos
+								</a>
+							</li>
+
+						</ul>
+					</li>
+					{%endif%}
+					{% if is_granted("ROLE_SUPERVISOR") and not is_granted("ROLE_AREA")%}
+						<li>
+						<a href="#" class="dropdown-toggle">
+							<i class="icon-edit"></i>
+							<span class="menu-text"> Contrataci&oacute;n </span>
+
+							<b class="arrow icon-angle-down"></b>
+						</a>
+
+						<ul class="submenu">
+							<li>
+								<a href="{{path('contrato')}}">
+									<i class="icon-double-angle-right"></i>
+									Contratos
+								</a>
+							</li>
 							<li>
 								<a href="{{path('pago')}}">
 									<i class="icon-double-angle-right"></i>
