--- a/src/IDPC/ContractualBundle/Resources/views/Informe/new.html.twig
+++ b/src/IDPC/ContractualBundle/Resources/views/Informe/new.html.twig
@@ -1,14 +1,19 @@
 {% extends '::base.html.twig' %}
 
 {% block body -%}
-    <h1>Informe creation</h1>
+<div class="page-header">
+    <h1>Subir Informe</h1>
 
+</div>
     {{ form(form) }}
 
+
+{% endblock %}
+{% block breadcumbs %}
         <ul class="record_actions">
     <li>
         <a href="{{ path('informe') }}">
-            Back to the list
+            Regresar
         </a>
     </li>
 </ul>
