--- a/src/IDPC/ContractualBundle/Resources/views/Pago/show.html.twig
+++ b/src/IDPC/ContractualBundle/Resources/views/Pago/show.html.twig
@@ -1,18 +1,19 @@
 {% extends '::base.html.twig' %}
 
+
 {% block body -%}
 <div class="page-header">
     	<h1>Pago correspondiente a {{ entity.mes|date('F-Y') }}</h1>
-		{% if entity.estado != 100 %}
+        <br>
+        {% if entity.estado != 100 %}
         <a href="{{ path('informe_new') }}" class="btn btn-primary btn-mini"><i class="icon-plus icon-white"></i>Informe Actividades</a>
         <a href="{{ path('aportes_generar', {'id': entity.id }) }}" class="btn btn-info btn-mini"><i class="icon-plus icon-white"></i>Aportes</a>
         <a href="{{ path('declaracion_new') }}" class="btn btn-mini"><i class="icon-plus icon-white"></i>Declaraci&oacute;n</a>
-        
         {% if entity.informe.pago is defined and entity.declaracion.pago is defined %}
-
         <a href="{{ path('pago_lock', { 'id': entity.id } ) }}" class="btn btn-inverse btn-mini "><i class="icon-lock icon-white"> Confirmar</i></a>
         {%endif%}
 {%endif%}
+        <div class="page"></div>
 </div>
 {% if (is_expr_granted("hasRole('ROLE_ADMIN')")) -%}
     <table class="table table-striped">
@@ -37,8 +38,8 @@
     </table>
 {% endif %}
 
-{% if (is_expr_granted("hasRole('ROLE_CONTRATISTA')")) -%}
-        {% if entity.contrato.estudio.contratista.documento == app.user.username %}
+{% if (is_expr_granted("hasRole('ROLE_SUPERVISOR')")) -%}
+        {% if entity.contrato.supervisor.documento == app.user.username %}
     <table class="table table-striped">
         <thead>
             <tr>
@@ -78,11 +79,59 @@
 {% endif %}
 {% endif %}
 
-        <ul class="record_actions">
-    <li>
+{% if (is_expr_granted("hasRole('ROLE_CONTRATISTA')")) -%}
+        {% if entity.contrato.estudio.contratista.documento == app.user.username %}
+    <table class="table table-striped">
+        <thead>
+            <tr>
+                <th>Mes</th>
+                <th>Valor</th>
+                <th>Numeropago</th>
+                <th>Estado</th>
+                <th>Informe</th>
+                <th>Aportes</th>
+                <th>Declaraci&oacute;n</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>{% if entity.mes %}{{ entity.mes|date('M-Y') }}{% endif %}</td>
+                <td>{{ entity.valor|number_format(2, '.', ',') }}</td>
+                <td>{{ entity.numeroPago }}</td>
+                <td>{{ entity.estado }}</td>
+                <td>
+                    {% if entity.informe.pago is not defined or entity.informe.pago is null %}
+                        <span class="label label-yellow arrowed">pendiente</span>
+                    {% else %}
+                        <a href="{{ path('informe_showByPago', {'id': entity.id }) }}">
+                            <span class="label label-success arrowed-in arrowed-in-right">enviado</span>
+                        </a>
+                    {% endif %}
+                </td>
+                <td><span class="label label-yellow arrowed">pendiente</span></td>
+                <td>
+                    {% if entity.declaracion.pago is not defined or entity.declaracion.pago is null %}
+                        <span class="label label-yellow arrowed">pendiente</span>
+                    {% else %}
+                        <span class="label label-success arrowed-in arrowed-in-right">enviado</span>
+                    {% endif %}
+                    </td>
+            </tr>
+        </tbody>
+    </table>
+{% endif %}
+{% endif %}
+{% endblock %}
+
+{%block breadcumbs%}
+
+<div class="nav-search">
+        <ul class="nostyle">
+    <li class="previous">
         <a href="{{ path('pago') }}">
-            Back to the list
+            Regresar
         </a>
     </li>
 </ul>
-{% endblock %}
+    </div>
+{%endblock%}
