--- a/src/IDPC/ContractualBundle/Resources/views/Cumplimiento/index.html.twig
+++ b/src/IDPC/ContractualBundle/Resources/views/Cumplimiento/index.html.twig
@@ -28,6 +28,9 @@
                     <li>
                         <a href="{{ path('cumplimiento_edit', { 'id': entity.id }) }}">edit</a>
                     </li>
+                    <li>
+                        <a href="{{ path('cumplimiento_certificado', { 'id': entity.id }) }}">generar</a>
+                    </li>
                 </ul>
                 </td>
             </tr>
