--- a/src/IDPC/ContractualBundle/Resources/views/Informe/showByPago.html.twig
+++ b/src/IDPC/ContractualBundle/Resources/views/Informe/showByPago.html.twig
@@ -1,44 +1,61 @@
 {% extends '::base.html.twig' %}
 
 {% block body -%}
-<div class="page-header">
+<div class="widget-box">
+    <div class="widget-header">
+        <h4>Informe</h4>
+        <span class="widget-toolbar">
+            {% if (is_expr_granted("hasRole('ROLE_CONTRATISTA')")) -%}
+            {% if entity.pago.estado != 100 %}
+                <a href="{{ path('informe_edit', { 'id': entity.id }) }}" ><i class="icon-edit icon-white"></i></a>
+                <div style="float:right;">{{ form(delete_form) }}</div>
+            {% endif %}
+            {% endif %}    
+            </span>
+        </div>
+        <div class="widget-body">
+            <div class="widget-main no-padding">
+                <fieldset>
 
-    <h1>Informe</h1>
-    <br>
-    <a href="{{ path('informe_edit', { 'id': entity.id }) }}" class="btn btn-primary btn-mini"><i class="icon-edit icon-white"></i>Editar</a>
-    <div style="float:right;">{{ form(delete_form) }}</div>
-
-</div>
 
 
-<table class="record_properties">
-    <tbody>
-        <tr>
-            <th>Fecha y hora de env&iacute;o</th>
-            <td>{{ entity.createdat|date('Y-m-d H:i:s') }}</td>
-        </tr>
-        <tr>
-            <th></th>
-            <td><a href="{{ asset('uploads/documents/') }}{{ entity.path }}" target="_blank" >Ver documento</a></td>
-        </tr>
-        <tr>
-            <th></th>
-            <td><br>
-                <iframe src="http://docs.google.com/gview?url=http://contratacion/{{ asset('uploads/documents/') }}{{ entity.path }}&embedded=true" style="width:600px; height:500px;" frameborder="0"></iframe></td>
-        </tr>
-    </tbody>
-</table>
+
+
+                    <table class="record_properties">
+                        <tbody>
+                            <tr>
+                                <th>Fecha y hora de env&iacute;o</th>
+                                <td>{{ entity.createdat|date('Y-m-d H:i:s') }}</td>
+                            </tr>
+                            <tr>
+                                <th></th>
+                                <td><a href="{{ asset('uploads/documents/') }}{{ entity.path }}" target="_blank" >Ver documento</a></td>
+                            </tr>
+                            <tr>
+                                <th></th>
+                                <td><br>
+                                    <iframe src="http://docs.google.com/gview?url=http://contratacion/{{ asset('uploads/documents/') }}{{ entity.path }}&embedded=true" style="width:600px; height:500px;" frameborder="0"></iframe></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </fieldset>
+                <div class="form-actions">
+                </div>
+            </div>
+        </div>
+    </div>
+
 
 
 {% endblock %}
 
 {% block breadcumbs %}
-<ul class="pagination-sm">
-    <li>
+    <ul class="pagination-sm">
+        <li>
 
 
-        <a href="{{ path('pago_show', { 'id': entity.pago.id }) }}">Regresar</a>
+            <a href="{{ path('pago_show', { 'id': entity.pago.id }) }}">Regresar</a>
 
-    </li>
-</ul>
+        </li>
+    </ul>
 {% endblock %}
