--- a/src/IDPC/ContractualBundle/Resources/views/Declaracion/new.html.twig
+++ b/src/IDPC/ContractualBundle/Resources/views/Declaracion/new.html.twig
@@ -1,14 +1,29 @@
 {% extends '::base.html.twig' %}
 
 {% block body -%}
-    <h1>Declaracion creation</h1>
 
+<div class="widget-box">
+    <div class="widget-header">
+        <h4>Subir Declaraci&oacute;n</h4>
+    </div>
+        <div class="widget-body">
+            <div class="widget-main no-padding">
+                <fieldset>
     {{ form(form) }}
+                        </fieldset>
+                    <div class="form-actions">
+                        </div>
+                </div>
+            </div>
+    </div>
 
+                        
+{% endblock %}
+{% block breadcumbs %}
         <ul class="record_actions">
     <li>
         <a href="{{ path('declaracion') }}">
-            Back to the list
+            Regresar
         </a>
     </li>
 </ul>
