--- a/src/IDPC/ContractualBundle/Resources/views/Pago/show.html.twig
+++ b/src/IDPC/ContractualBundle/Resources/views/Pago/show.html.twig
@@ -5,14 +5,20 @@
 <div class="page-header">
     	<h1>Pago correspondiente a {{ entity.mes|date('F-Y') }}</h1>
         <br>
-        {% if entity.estado != 100 %}
-        <a href="{{ path('informe_new') }}" class="btn btn-primary btn-mini"><i class="icon-plus icon-white"></i>Informe Actividades</a>
-        <a href="{{ path('aportes_generar', {'id': entity.id }) }}" class="btn btn-info btn-mini"><i class="icon-plus icon-white"></i>Aportes</a>
-        <a href="{{ path('declaracion_new') }}" class="btn btn-mini"><i class="icon-plus icon-white"></i>Declaraci&oacute;n</a>
-        {% if entity.informe.pago is defined and entity.declaracion.pago is defined %}
-        <a href="{{ path('pago_lock', { 'id': entity.id } ) }}" class="btn btn-inverse btn-mini "><i class="icon-lock icon-white"> Confirmar</i></a>
+        {% if (is_expr_granted("hasRole('ROLE_CONTRATISTA')")) -%}
+            {% if entity.estado != 100 %}
+                <a href="{{ path('informe_new') }}" class="btn btn-primary btn-mini"><i class="icon-plus icon-white"></i>Informe Actividades</a>
+                <a href="{{ path('aportes_generar', {'id': entity.id }) }}" class="btn btn-info btn-mini"><i class="icon-plus icon-white"></i>Aportes</a>
+                <a href="{{ path('declaracion_new') }}" class="btn btn-mini"><i class="icon-plus icon-white"></i>Declaraci&oacute;n</a>
+                {% if entity.informe.pago is defined and entity.declaracion.pago is defined %}
+                    <a href="{{ path('pago_lock', { 'id': entity.id } ) }}" class="btn btn-inverse btn-mini "><i class="icon-lock icon-white"> Confirmar</i></a>
+                {%endif%}
+            {%endif%}
         {%endif%}
-{%endif%}
+                    
+        {% if (is_expr_granted("hasRole('ROLE_SUPERVISOR')")) -%}
+                <a href="{{ path('cumplimiento_new') }}" class="btn btn-primary btn-mini"><i class="icon-plus icon-white"></i>Certificaci&oacute;n de Cumplimiento</a>
+        {% endif %}
         <div class="page"></div>
 </div>
 {% if (is_expr_granted("hasRole('ROLE_ADMIN')")) -%}
@@ -60,17 +66,21 @@
                 <td>{{ entity.estado }}</td>
                 <td>
                     {% if entity.informe.pago is not defined or entity.informe.pago is null %}
-                        <span class="label label-danger arrowed">pendiente</span>
+                        <span class="label label-yellow arrowed">pendiente</span>
                     {% else %}
-                        <span class="label label-success arrowed-in arrowed-in-right">enviado</span>
+                        <a href="{{ path('informe_showByPago', {'id': entity.id }) }}">
+                            <span class="label label-purple arrowed-in arrowed-in-right">enviado</span>
+                        </a>
                     {% endif %}
                 </td>
-                <td><span class="label label-danger arrowed">pendiente</span></td>
+                <td><span class="label label-yellow arrowed">pendiente</span></td>
                 <td>
                     {% if entity.declaracion.pago is not defined or entity.declaracion.pago is null %}
-                        <span class="label label-danger arrowed">pendiente</span>
+                        <span class="label label-yellow arrowed">pendiente</span>
                     {% else %}
-                        <span class="label label-success arrowed-in arrowed-in-right">enviado</span>
+                        <a href="{{ path('declaracion_showByPago', {'id': entity.id }) }}">
+                            <span class="label label-purple arrowed-in arrowed-in-right">enviado</span>
+                        </a>
                     {% endif %}
                     </td>
             </tr>
@@ -104,7 +114,7 @@
                         <span class="label label-yellow arrowed">pendiente</span>
                     {% else %}
                         <a href="{{ path('informe_showByPago', {'id': entity.id }) }}">
-                            <span class="label label-success arrowed-in arrowed-in-right">enviado</span>
+                            <span class="label label-purple arrowed-in arrowed-in-right">enviado</span>
                         </a>
                     {% endif %}
                 </td>
@@ -113,7 +123,9 @@
                     {% if entity.declaracion.pago is not defined or entity.declaracion.pago is null %}
                         <span class="label label-yellow arrowed">pendiente</span>
                     {% else %}
-                        <span class="label label-success arrowed-in arrowed-in-right">enviado</span>
+                        <a href="{{ path('declaracion_showByPago', {'id': entity.id }) }}">
+                            <span class="label label-purple arrowed-in arrowed-in-right">enviado</span>
+                        </a>
                     {% endif %}
                     </td>
             </tr>
