--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -51,7 +51,9 @@
 		</style>
 		{%block stylesheets%}{%endblock%}
 		<!--inline styles related to this page-->
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" /></head>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        
+        </head>
 	<link rel="icon" type="image/png" href="{{asset('img/favicon.png')}}" >
 
 	<body>
