--- a/src/IDPC/ContractualBundle/Resources/views/Aportes/certificado.html.twig
+++ b/src/IDPC/ContractualBundle/Resources/views/Aportes/certificado.html.twig
@@ -2,8 +2,8 @@
 <table class="tablatitulo" width="100%">
   <tr>
     <td rowspan="3"><div align="center"><img src="img/logoreportheader.png" width="125" height="108" /></div></td>
-    <td rowspan="3"><b><p align="center">CERTIFICACION DE APORTES OBLIGATORIOS AL SISTEMA INTEGRAL
-DE SEGURIDAD SOCIAL</p></b></td>
+    <td rowspan="3"><b><p align="center">CERTIFICACIÓN PARA EFECTOS DE DISMINUCIÓN DE LA BASE DE RETENCIÓN EN LA FUENTE</p>
+    </b></td>
     <td><p>Código: GF-F04</p></td>
   </tr>
   <tr>
@@ -15,35 +15,37 @@ DE SEGURIDAD SOCIAL</p></b></td>
 </table>
 <br>
 <table class="tabla" width="100%" style="border-style:solid; border-width:thin">
+
+  <tr>
+        <td colspan="4"><p>Señores:</p></td>
+  </tr>
       <tr>
-        <td colspan="4">
-               <p>Bogotá D.C. y Fecha</p></td>
+        <td colspan="4"><p><b>INSTITUTO DISTRITAL DE PATRIMONIO CULTURAL</b></p></td>
       </tr>
       <tr>
-        <td colspan="2"><b>YO:</b></td>
-        <td colspan="2"><b>Identificado con: C.C - C.E - NIT - TI - Numero: </b></td>
+        <td colspan="4">Bogotá, D.C.</td>
       </tr>
       <tr>
-        <td colspan="2"><b>Con domicilio principal en Bogotá dirección : </b></td>
-        <td colspan="2"><b>Celular: Telefono</b></td>
+        <td colspan="4"><b>NOMBRE:</b></td>
       </tr>
       <tr>
-        <td colspan="4"><b>ASUNTO:</b> Atentamente, solicito ordenar a quien corresponda realizar el siguiente pago, de acuerdo con la información que a continuación se relaciona</td>
+        <td colspan="2"><b>DOCUMENTO:</b></td>
+        <td colspan="2"><b>CONTRATO:</b></td>
       </tr>
       <tr>
-        <td colspan="4"><b>Régimen:</b> 1. Común / 2. Simplificado</td>
+        <td colspan="4"><p><b>En atención al artículo 329 del Estatuto Tributario,  certifico que pertenezco a la categoria de:</b><b><br />
+        </b></p></td>
       </tr>
       <tr>
-        <td colspan="4"><p><b>DECLARO BAJO LA GRAVEDAD DE JURAMENTO QUE:</b></p>
-        <p>1. Para dar cumplimiento a lo dispuesto en el Paragrafo 1 del Articulo 4 del Decreto 2271 de 2009, el Articulo 126-1
-del ET y el Articulo 15 del Decreto 836 de 1991, que los documentos soporte del pago de aportes obligatorios al
-Sistema General de Seguridad Social corresponden a los ingresos provenientes del contrato materia del pago sujeto
-a retención, número XXXXXXX suscrito con la el IDPC</p>
-<p>2. Para dar cumplimiento al Decreto 1950 de 2012, declaro bajo el gravamen de Juramento que cumplo con los
-requisitos señalados en el Articulo 499 del Estatuto Tributario. (Quienes pertenecen al régimen simplificado).</p>
-<p>3. Para dar cumplimiento a lo dispuesto en el articulo 18 de la ley 1122 de 2007 y el articulo 50 de la ley 789 de 2002,
-entrego copia del pago correspondiente a los aportes al Sistema de Seguridad Social, los cuales se efectuaron así :</p>
-</td>
+        <td colspan="2">Empleado: </td>
+        <td colspan="2">Trabajador por cuenta propia: </td>
+      </tr>
+      <tr>
+        <td colspan="2">Declarante del Impuesto de Renta:</td>
+        <td colspan="2">No declarante del Impuesto de Renta:</td>
+      </tr>
+      <tr>
+        <td colspan="4">De conformidad con la Ley 1607 de 2012 y sus Decretos Reglamentarios 099 y 1070 de 2013, CERTIFICO bajo la gravedad del juramento que la información aquí consignada y sobre la cual solicito disminución de la base de retención en la fuente es verdadera.</td>
       </tr>
       <tr>
         <td>&nbsp;</td>
@@ -86,15 +88,12 @@ entrego copia del pago correspondiente a los aportes al Sistema de Seguridad Soc
         <td colspan="4">&nbsp;</td>
       </tr>
       <tr>
-        <td colspan="4">
-        __________________________
-        <br>Supervisor y/o interventor
-        </td>
+        <td colspan="4"> __________________________ <br />
+          Supervisor y/o interventor </td>
       </tr>
       <tr>
-        <td colspan="4">Proyectó:
-        <br>Revisó:
-        </td>
+        <td colspan="4">Proyectó: <br />
+          Revisó: </td>
       </tr>
-    </table>
+</table>
 {% endblock %}
