--- a/src/IDPC/ContractualBundle/Resources/views/Aportes/index.html.twig
+++ b/src/IDPC/ContractualBundle/Resources/views/Aportes/index.html.twig
@@ -1,7 +1,9 @@
 {% extends '::base.html.twig' %}
 {% block body -%}
 
-    <h1>Aportes Al Pago de: {{pago.valor |number_format(0, ',', '.')}}</h1>
+    <h3>Pago de aportes obligatorios a pago de {{ pago.contrato.estudio.contratista.documento }}
+    por valor de {{pago.valor |number_format(0, ',', '.')}} del perido {% if pago.mes %}{{ pago.mes|date('M-Y') }}{% endif %}</h3>
+    
 
     <table class="table table-striped">
         <thead>
@@ -17,10 +19,12 @@
         </thead>
         <tbody>
             {% set tot = 0 %}
+            {% set tot1 = 0 %}
         {% for entity in entities %}
-           {% set tot = tot + entity.valor %} 
+           {% set tot = tot + entity.valor %}
+            {% set tot1 = tot1 + entity.limite %}
             <tr>
-                <td><a href="{{ path('aportes_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
+                <td>{{ entity.id }}</td>
                 <td>{{ entity.tipo }}</td>
                 <td>{{ entity.limite |number_format(0, ',', '.') }}</td>
                 <td>{{ entity.Referencia }}</td>
@@ -37,9 +41,9 @@ Registrar
             
                     <tr>
                 <td></td>
-                <td></td>
-                <td></td>
-                <td style="text-align: right">Total Aportes: </td>
+                <td style="text-align: right">Total Aportes Obligatorios: </td>
+                <td>{{tot1 |number_format(0, ',', '.')}}</td>
+                <td style="text-align: right">Total Aportes Pagados: </td>
                 <td>{{tot |number_format(0, ',', '.')}}</td>
                 <td></td>
                 <td></td>
@@ -67,7 +71,7 @@ Generar Certificado
  {%endfor%} 
   </div>
   <div class="modal-footer">
-    <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
+    <button type="button" onclick="javascript:window.location.reload()" class="btn btn-default" data-dismiss="modal">Cerrar</button>
   </div>
 </div><!-- /.modal-content -->
 </div><!-- /.modal-dialog -->
@@ -120,8 +124,8 @@ Generar Certificado
 </div><!-- /.modal --> 
 
 <!-- Modal Certificado-->
-<div class="modal fade" id="mCertificado" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-<div class="modal-dialog">
+<div class="bootbox modal fade in" id="mCertificado" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+<div class="modal-dialog modal-lg">
 <div class="modal-content">
   <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
@@ -130,7 +134,7 @@ Generar Certificado
   <div class="modal-body">
  {% for entity in entities %}
  {%if entity.tipo == 'ARL'%}     
-<iframe src="{{ path('aportes_certifica', { 'id': entities[0].pago.id }) }}" width="550" height="250" frameborder="0" allowtransparency="true" scrolling=no></iframe> {%endif%}
+<iframe src="{{ path('aportes_certifica', { 'id': entities[0].pago.id }) }}" width="840" height="330" frameborder="0" allowtransparency="true"></iframe> {%endif%}
  {%endfor%} 
   </div>
   <div class="modal-footer">
@@ -139,5 +143,4 @@ Generar Certificado
 </div><!-- /.modal-content -->
 </div><!-- /.modal-dialog -->
 </div><!-- /.modal --> 
-   
 {% endblock %}
