--- a/src/IDPC/ContractualBundle/Resources/views/Aportes/certificado.html.twig
+++ b/src/IDPC/ContractualBundle/Resources/views/Aportes/certificado.html.twig
@@ -1,13 +1,18 @@
+	<head>
+		<meta charset="utf-8" />
+		<!--basic styles-->
+                <link href="/css/estilos.css" rel="stylesheet" type="text/css" />
+        </head>         
 {% block body -%}
 <table class="tablatitulo" width="100%">
   <tr>
-    <td rowspan="3"><div align="center"><img src="img/logoreportheader.png" width="125" height="108" /></div></td>
-    <td rowspan="3"><b><p align="center">CERTIFICACIÓN PARA EFECTOS DE DISMINUCIÓN DE LA BASE DE RETENCIÓN EN LA FUENTE</p>
+    <td rowspan="3"><div align="center"><img src="/img/logoreportheader.png" width="125" height="108" /></div></td>
+    <td rowspan="3"><b><p align="center">CERTIFICACIÓN PARA EFECTOS DE DISMINUCIÓN<br> DE LA BASE DE RETENCIÓN EN LA FUENTE</p>
     </b></td>
-    <td><p>Código: GF-F04</p></td>
+    <td><p>Código: </p></td>
   </tr>
   <tr>
-    <td><p>Versión: 3</p></td>
+    <td><p>Versión: 2</p></td>
   </tr>
   <tr>
     <td><p>Pág. 1 de 1 </p></td>
