--- a/src/IDPC/ContractualBundle/Resources/views/Certificacion/subir.html.twig
+++ b/src/IDPC/ContractualBundle/Resources/views/Certificacion/subir.html.twig
@@ -1,6 +1,6 @@
 
 {% block body -%}
-
+SUBIR SUBIR SUBIR {{certificado.id}} - {{certificado.categoria}} -{{certificado.declararenta}} - {{certificado.pago.id}}
 <div class="widget-box">
     <div class="widget-header">
     </div>
