--- a/src/IDPC/ContractualBundle/Resources/views/Aportes/index.html.twig
+++ b/src/IDPC/ContractualBundle/Resources/views/Aportes/index.html.twig
@@ -64,7 +64,7 @@
     </table>
 
 <button class="btn btn-sm btn-primary" data-toggle="modal" data-target="#mCertificado">
-Generar Certificado
+Certificado de Aportes
 </button>
     
 <!-- Modal SAlud -->
@@ -141,13 +141,12 @@ Generar Certificado
 <div class="modal-content">
   <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-    <h4 class="modal-title" id="myModalLabel">Certificado</h4>
+    <h4 class="modal-title" id="myModalLabel">Certificado de Aportes ok</h4>
   </div>
   <div class="modal-body">
- {% for entity in entities %}
- {%if entity.tipo == 'ARL'%}     
-<iframe src="{{ path('certificacion_new', { 'id': entities[0].pago.id }) }}" width="840" height="330" frameborder="0" allowtransparency="true"></iframe> {%endif%}
- {%endfor%} 
+   
+<iframe src="{{ path('certificacion_new', { 'id': entities[0].pago.id }) }}" width="840" height="330" frameborder="0" allowtransparency="true"></iframe>
+
   </div>
   <div class="modal-footer">
     <button type="button" onclick="javascript:window.location.reload()" class="btn btn-default" data-dismiss="modal">Cerrar</button>
